# alqac2025

./: .gitignore  COMPETITION.md  README.md  analyze_results.py  answer_questions.py  chunking.ipynb  combine_relevant_articles.py  context_process.py  ensemble_answers.ipynb  evaluate.py  expand_retrieval_results.py  filter_relevant_articles.py  gen_config.py  inference.py  main.py  pyproject.toml  requirements.txt  rerank_answer_questions.py  rerank_retrieval.py  run_experiments.py  setup.sh  vistral_answer_questions.py
data/: mock_all_doc.json  mock_all_doc_2.json  mock_local_doc.json  mock_local_doc_2.json  mock_queries.json  mock_queries_2.json
src/: __init__.py  evaluator.py  system.py
src/answerers/: base.py  tf_answerer.py
src/config/: config.py  config.yaml
src/core/: chroma.py  reranker.py  retriever.py
src/data/: data_loader.py  data_preprocessor.py
src/embeddings/: bge_m3.py  embeddings.py  registry.py
src/models/: __init__.py  schemas.py
src/retrievers/: base.py  bm25.py  ensemble.py  global_retriever.py  lexical.py  local_retriever.py  qld.py  semantic.py  tfidf.py
src/utils/: __init__.py  convert_collection_name.py  logging.py  preprocess_func_for_bm25.py  rrf_fusion.py
